[DATALAD] Added subdataset

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = code/tacc-openneuro
 	url = https://github.com/poldracklab/tacc-openneuro.git
 	datalad-url = https://github.com/poldracklab/tacc-openneuro.git
+[submodule "sourcedata/raw"]
+	path = sourcedata/raw
+	url = https://github.com/OpenNeuroDatasets/ds002898.git
+	datalad-id = 87f3b2ce-b093-11ea-908b-06b239d4e34e
+	datalad-url = https://github.com/OpenNeuroDatasets/ds002898.git
