--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,8 @@
 	url = https://github.com/OpenNeuroDatasets/ds002898.git
 	datalad-id = 87f3b2ce-b093-11ea-908b-06b239d4e34e
 	datalad-url = https://github.com/OpenNeuroDatasets/ds002898.git
+[submodule "sourcedata/templateflow"]
+	path = sourcedata/templateflow
+	url = https://github.com/templateflow/templateflow.git
+	datalad-id = c79c47b6-d0fb-11e8-aa11-64006a8a730f
+	datalad-url = https://github.com/templateflow/templateflow.git
