--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,7 @@
 	path = sourcedata/raw
 	url = https://github.com/OpenNeuroDatasets/ds002898.git
 	datalad-id = 87f3b2ce-b093-11ea-908b-06b239d4e34e
-	datalad-url = https://github.com/OpenNeuroDatasets/ds002898.git
+	datalad-url = /scratch1/03201/jbwexler/openneuro_derivatives/raw/ds002898
 [submodule "sourcedata/templateflow"]
 	path = sourcedata/templateflow
 	url = https://github.com/templateflow/templateflow.git
